--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,73 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-menu contentId="main-content">
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+
+      <div style="display: flex; align-items: center;justify-content: space-around; padding-right: 50px">
+        <ion-img style="width: 80px"  alt="Logo" src="./assets/LogoSinFondo.png"></ion-img>
+      </div>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">This is the menu content.</ion-content>
+  <ion-button color="favorite" (click)="logout()">LOGOUT
+    <ion-icon slot="icon-only" name="log-out"></ion-icon>
+  </ion-button>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-header >
+    <ion-toolbar class="container">
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <div style="display: flex; align-items: center;justify-content: space-around; padding-right: 50px">
+      <ion-img style="width: 80px"  alt="Logo" src="./assets/LogoSinFondo.png"></ion-img>
+      </div>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+
+  <ion-content [fullscreen]="true">
+    <ion-card-content>
+      <swiper>
+        <ng-template swiperSlide><ion-img style="width: unset !important;"  alt="Logo" src="./assets/fondo.jpg"></ion-img></ng-template>
+        <ng-template swiperSlide>Slide 2</ng-template>
+        <ng-template swiperSlide>Slide 3</ng-template>
+      </swiper>
+      </ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col size-md="6" offset-md="3">
+            <ion-card >
+              <ion-card-header class="container">
+                <ion-card-title>New Expense</ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-item>
+                  <ion-label position="floating">Expense Reason</ion-label>
+                  <ion-input type="text"></ion-input>
+                </ion-item>
+                <ion-item>
+                  <ion-label position="floating">Expense Amount</ion-label>
+                  <ion-input type="number"></ion-input>
+                </ion-item>
+                <div class="ion-margin-vertical ion-text-right">
+                <ion-button fill="outline" color="danger">
+                  <ion-icon slot="start" name="close"></ion-icon>
+                  Clear</ion-button>
+                <ion-button><ion-icon slot="start" name="add-circle-outline"></ion-icon>Add Expense</ion-button>
+                </div>
+              </ion-card-content>
+            </ion-card>
+
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+  </ion-content>
+</div>
+
+
+
+
+
+
+
+
