--- a/src/global.scss
+++ b/src/global.scss
@@ -9,6 +9,11 @@
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
 
+
+@import '~swiper/scss';
+@import '~@ionic/angular/css/ionic-swiper';
+
+
 /* Core CSS required for Ionic components to work properly */
 @import "~@ionic/angular/css/core.css";
 
