--- a/src/app/home/inicio/inicio.page.html
+++ b/src/app/home/inicio/inicio.page.html
@@ -17,7 +17,7 @@
               <source src="./assets/video/intro.mp4">
             </video>
             <div class="marca">
-              Richard
+              GOSA Racket Club
             </div>
           </div>
         </ng-template>
@@ -76,16 +76,16 @@
 
           <div class="card">
             <img src="../../../assets/instalaciones2.jpg" alt="Denim Jeans" style="width:100%">
-            <h1>Grupal-Anual</h1>
+            <h1>Familiar-Anual</h1>
             <p class="price">$18,000.00</p>
-            <h1>Grupal-Mensual</h1>
+            <h1>Familiar-Mensual</h1>
             <p class="price">$1,500.00</p>
             <p><button>Mas informacion</button></p>
           </div>
 
         </ion-col>
 
-<!--
+
 
         <ion-col size-lg="3" size-md="6" size-sm="12" size-xs="12">
           <div class="flip-card">
@@ -191,7 +191,7 @@
               </div>
             </div>
           </div>
-        </ion-col> -->
+        </ion-col>
 
 
 
