--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -10,7 +10,7 @@
       <!-- Menú lateral -->
       <ion-menu contentId="main-content" type="overlay">
         <ion-header>
-          <ion-toolbar color="tertiary">
+          <ion-toolbar>
             <ion-title>Menú</ion-title>
           </ion-toolbar>
         </ion-header>
