--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,8 +36,8 @@
       <ion-card>
         <img src="./assets/user.png" alt="Avatar" style="alignment: center; width:auto">
         <div class="container" style="text-align: center">
-          <h4><b>Josue Alvarez</b></h4>
-          <p>Membresia</p>
+          <h4 ><b>{{user.name}}</b><b><br> </b><b>{{user.lastName}}</b></h4>
+          <p>Membresia: {{user.role}}</p>
         </div>
       </ion-card>
     </ion-content>
